--- a/app/views/about.html
+++ b/app/views/about.html
@@ -4,5 +4,6 @@
     plus
   <input type="number" min="0" ng-model="secondnum">
     equals 
-  <b>{{firstnum + secondnum}}</b>
+  <span class="label label-success">{{firstnum + secondnum}}</span>
 </div>
+<br>
