--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,4 +4,6 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 // endbower
 @import "variables";
 @import "content";
+@import "forecast";
+@import "mixins";
 
