Updated hrefs for gh-pages

--- a/app/views/forecast.html
+++ b/app/views/forecast.html
@@ -7,5 +7,5 @@
     <dd>Min: {{prediction.temp.min}} &deg;F Max: {{prediction.temp.max}} &deg;F</dd>
 </dl>
 
-<p><a ng-href="/#/current/{{cityID}}" id="currentWeatherBtn" class="btn btn-lg btn-primary col-md-6 col-md-offset-3">View Current Weather</a></p>
+<p><a ng-href="/angular-app/#/current/{{cityID}}" id="currentWeatherBtn" class="btn btn-lg btn-primary col-md-6 col-md-offset-3">View Current Weather</a></p>
 
