--- a/app/views/current.html
+++ b/app/views/current.html
@@ -14,5 +14,11 @@
 
 <p><a ng-href="/angular-app/#/forecast/{{cityID}}" class="btn btn-lg btn-primary">View 16-day Forecast</a></p>
 <br>
-<p><button class="btn btn-sm btn-primary" ng-click="saveCity(currentWeather)">Save City</button></p>
+<script>
+function citySavedMSG() {
+        document.getElementById('saveBtn').innerHTML = 'City Saved';
+    }
+</script>
+<p><button onclick="citySavedMSG()" class="btn btn-sm btn-primary" ng-click="saveCity(currentWeather)">Save City</button></p>
+<h5 id="saveBtn"></h5>
 
