--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,4 +6,5 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "content";
 @import "forecast";
 @import "mixins";
+@import "transitions";
 
