--- a/app/views/current.html
+++ b/app/views/current.html
@@ -1,5 +1,4 @@
 <h1>Current Weather for {{currentWeather.name}}</h1>
-
 <dl>
     <dt>Currently</dt>
     <dd>{{currentWeather.weather[0].main}}</dd>
@@ -11,14 +10,16 @@
     <dt>Clouds</dt>
     <dd>{{currentWeather.clouds.all}}%</dd>
 </dl>
-
 <p><a ng-href="/angular-app/#/forecast/{{cityID}}" class="btn btn-lg btn-primary">View 16-day Forecast</a></p>
 <br>
-<script>
-function citySavedMSG() {
-        document.getElementById('saveBtn').innerHTML = 'City Saved';
-    }
-</script>
-<p><button onclick="citySavedMSG()" class="btn btn-sm btn-primary" ng-click="saveCity(currentWeather)">Save City</button></p>
-<h5 id="saveBtn"></h5>
-
+<p>
+    <button class="btn btn-sm btn-primary" ng-click="saveCity(currentWeather)">Save City</button>
+</p>
+<div ng-messages="citySaved">
+    <p class="city-saved-alert bg-success text-success" ng-message="success">
+        {{currentWeather.name}} has been saved to your list of cities.
+    </p>
+    <p class="city-saved-alert bg-warning text-warning" ng-message="duplicate">
+        {{currentWeather.name}} has already been saved to your list of cities.
+    </p>
+</div>
